<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/context_view"
    android:background="@color/purple">

    <ImageView
        android:id="@+id/back"
        android:layout_width="33dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="40dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bienvenue !"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiNomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/input_full_name"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_person_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiNom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiPrenomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/beforename"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_person_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiPrenom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiEmailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiMotPasseLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mot de passe"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_lock_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiMotPasse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiConfirmationMotPasseLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirmer Mot de passe"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_lock_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiConfirmationMotPasse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Updated RadioGroup -->
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioButtonHomme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:checked="true"
                        android:text="Homme" />
                    <RadioButton
                        android:id="@+id/radioButtonFemme"
                        android:layout_width="99dp"
                        android:layout_height="wrap_content"
                        android:text="Femme" />
                </RadioGroup>
                <!-- Champs pour adresse -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiAdresseLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="Adresse"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/baseline_home_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiAdresse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPostalAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_showFlag="true"
                    app:ccp_showNameCode="false"
                    app:ccp_showFullName="false"
                    app:ccp_defaultNameCode="TN"
                    tools:ignore="MissingClass" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tiTelephoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="Téléphone"
                    app:errorEnabled="true"
                 >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tiTelephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:backgroundTint="@color/purple"
                    android:text="S'inscrire"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Button" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
